Added list initialization API